# gnubg-nn-pypi

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  meson.build  meson.build_full  pyproject.toml
.github/actions/build-wheel/: action.yml
.github/workflows/: branch.yaml  build_and_test.yml  release.yml
docs/: api.rst  concepts.rst  conf.py  index.rst  overview.rst  readme.rst  references.rst
src/gnubgmodule/: __init__.py  gnubg_bridge.cpp  gnubgmodule.cpp
tests/: test_bearoff.py  test_functional.py  test_opening.py  test_unit.py  test_version.py
tests/gnubg/: test_engine_basic.py
tests/gnubg_nn/: test_functional.py  test_nn_unit.py  test_unit.py  test_version.py
